# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-12-02 20:30:29 GMT	John Goerzen <jgoerzen@complete.org>	patch-144

    Summary:
      Added new modules to cabal file
    Revision:
      missingh--head--0.5--patch-144


    modified files:
     ChangeLog Setup.description


2004-12-02 20:28:03 GMT	John Goerzen <jgoerzen@complete.org>	patch-143

    Summary:
      Final, ugly, annoying changes to make ConfigParser work with Hugs
    Revision:
      missingh--head--0.5--patch-143


    modified files:
     ChangeLog README debian/changelog
     libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     libsrc/MissingH/ConfigParser/Types.hs
     libsrc/MissingH/Either.hs


2004-12-02 18:54:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-142

    Summary:
      Updated docs
    Revision:
      missingh--head--0.5--patch-142


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-12-01 20:42:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-141

    Summary:
      Tested more ConfigParser stuff
    Revision:
      missingh--head--0.5--patch-141


    modified files:
     ChangeLog TODO testsrc/ConfigParser/Maintest.hs


2004-12-01 19:20:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-140

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-140


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     testsrc/ConfigParser/Maintest.hs


2004-12-01 17:07:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-139

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-139


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     testsrc/ConfigParser/Maintest.hs


2004-12-01 17:04:04 GMT	John Goerzen <jgoerzen@complete.org>	patch-138

    Summary: